BE-Vinh: post room status
