# backend/controllers/RoomController.js
@@ -1,5 +1,43 @@
 const { firestore } = require('../firebase/firebase');
 
+const postRoomStatus = async (req, res) => {
+    const {
+        roomNum,
+        status
+    } = req.body
+
+    try {
+        if (!roomNum || !status) {
+            return res.status(400).json({ error: 'Must have 2 attributes: roomNum, status' });
+        }
+
+        if (status !== 'available'
+            && status !== 'checked-in'
+            && status !== 'out-of-order') {
+            return res.status(400).json({ error: 'Room status wrong format, must be "available", "checked-in", "out-of-order"' });
+        }
+
+        const doc = await firestore.collection('rooms').where('roomNum', '==', roomNum).get();
+        if (doc.empty) {
+            return res.status(400).json({ error: 'Room not found' });
+        }
+
+        const id = doc.docs[0].id;
+        await firestore.collection('rooms').doc(id).update({
+            status: status
+        });
+
+        return res.status(200).json({ 
+            roomNum: roomNum,
+            status: status
+        });
+    }
+    catch (error) {
+        console.error(error);
+        return res.status(500).json({ error });
+    }
+}
+
 const createRoom = async (req, res) => {
     const { 
         roomNum, 
@@ -59,4 +97,4 @@ const deleteRoom = async (req, res) => {
     }
 }
 
-module.exports = { createRoom, deleteRoom }
+module.exports = { createRoom, deleteRoom, postRoomStatus }
