# backend/routes/RoomRoute.js
@@ -1,10 +1,11 @@
 const express = require('express');
-const { checkAdmin } = require('../middlewares/auth');
+const { checkAdmin, checkReceptionist } = require('../middlewares/auth');
 const router = express.Router();
 
 const roomController = require('../controllers/RoomController');
 
 router.post('/create', checkAdmin, roomController.createRoom);
 router.post('/delete', checkAdmin, roomController.deleteRoom);
+router.post('/status', checkReceptionist, roomController.postRoomStatus);
 
 module.exports = router;
